--- a/static/styles.css
+++ b/static/styles.css
@@ -9,7 +9,7 @@ body{
     top: 50%;
     left: 50%;
     width: 300px;
-    height: 300px;
+    height: 600px;
     margin: -150px;
     float: left;
     perspective: 500px;
@@ -36,16 +36,28 @@ body{
     height: 100%;
     width: 100%;
     background: white;
-    line-height: 300px;
-    color: #03446A;
+    line-height: 550px;
+    color: white;
     text-align: center;
-    font-size: 60px;
+    font-size: 35px;
+    font-weight: 600;
     border-radius: 5px;
     backface-visibility: hidden;
 }
 
 .back {
-    background: #03446A;
+    background: black;
     color: white;
     transform: rotateY( 180deg );
+}
+
+.back, a{
+    color: white;
+}
+
+.inspoHead{
+    text-align: center;
+    margin: 0 auto 10px auto;
+    font-weight: bolder;
+    color: chocolate;
 }
