--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {% include "header.html" %}
 <body>
     <main>
-        <div class="container" style="margin-top: 50px;" >
+        <div class="container" style="margin-top: 50px; background-color: darkgrey; height: 80vh" >
             <p style="color: aliceblue;">Placeholder</p>
         </div>
     </main>
