--- a/templates/header.html
+++ b/templates/header.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css') }}">
     <title>{{ title }}</title>
-    <script type="text/javascript" src="https://gc.kis.v2.scr.kaspersky-labs.com/FD126C42-EBFA-4E12-B309-BB3FDD723AC1/main.js?attr=7omwt5qq_4gSltGC3FnCCqXGPD6HBtEJ3Z193v7aWWtwFcr2HO1b2uL23T6NX-aABWwm38cRg-5rsD3IM1BXnlQSw3zCgLMtoglzX3a1BtaAaT6MC2j-TswG5kF4aj29eS-jGaXbc6KMHrfwssbz0Vp6aUicqKluWKa1N2xGw1TG0UWR3Fc9VbOoqBxIjeOtJsgq6jYOcSHZbZ8Zdyw_6Q" charset="UTF-8"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 
 </head>
 <header>
