--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,10 @@
 {% include "header.html" %}
 <body>
     <main>
-        <div class="container" style="margin-top: 50px; background-color: darkgrey; height: 80vh" >
-            <p style="color: aliceblue;">Placeholder</p>
+        <div class="container" style="margin-top: 50px; background-color: darkgrey; height: 80vh; padding: 20px" >
+            <button type="button" class="btn btn-info" onclick="changeText('users')">Get All Users</button>
+            <button type="button" class="btn btn-info" onclick="changeText('countries')">Get All Countries</button>
+            <p style="color: black;margin-top: 30px; text-align: justify" id="placeholder">Placeholder Text</p>
         </div>
     </main>
     <footer>
@@ -10,4 +12,12 @@
     </footer>
 </body>
 </html>
+<script>
 
+function changeText(type) {
+    $.get(("/" + type), function (response) {
+        console.log(response);
+        $('#placeholder').text(response);
+    });
+};
+</script>
