--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,30 @@
         <div class="container" style="margin-top: 50px; background-color: darkgrey; height: 80vh; padding: 20px" >
             <button type="button" class="btn btn-info" onclick="changeText('users')">Get All Users</button>
             <button type="button" class="btn btn-info" onclick="changeText('countries')">Get All Countries</button>
+            <button type="button" class="btn btn-info" data-toggle="modal" data-target="#myModal">Add New Country</button>
+
             <p style="color: black;margin-top: 30px; text-align: justify" id="placeholder">Placeholder Text</p>
+
+            <div class="modal fade" id="myModal" role="dialog">
+                <div class="modal-dialog">
+                  <!-- Modal content-->
+                  <div class="modal-content">
+                    <div class="modal-header">
+                        <h4 class="modal-title">Add Country</h4>
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    </div>
+                  <div class="modal-body">
+                      <p>Some text in the modal.</p>
+                  </div>
+                    <div class="modal-footer">
+                      <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+
         </div>
     </main>
     <footer>
