--- a/templates/index.html
+++ b/templates/index.html
@@ -16,18 +16,24 @@
                         <h4 class="modal-title">Add Country</h4>
                         <button type="button" class="close" data-dismiss="modal">&times;</button>
                     </div>
-                  <div class="modal-body">
-                      <p>Some text in the modal.</p>
-                  </div>
-                    <div class="modal-footer">
-                      <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                    </div>
+                    <form id="cForm">
+                      <div class="modal-body">
+                          <div class="form-group">
+                            <label for="cName">Country Name</label>
+                            <input type="text" class="form-control" id="cName" placeholder="Country Name">
+                          </div>
+                          <div class="form-group">
+                            <label for="cPop">Population</label>
+                            <input type="number" class="form-control" id="cPop" placeholder="Population">
+                          </div>
+                      </div>
+                        <div class="modal-footer">
+                            <button type="button" name="submit" type="submit" value="submit" class="btn btn-default" data-dismiss="modal" onclick="getFormData()">Submit</button>
+                        </div>
+                    </form>
                   </div>
                 </div>
-              </div>
             </div>
-
-
         </div>
     </main>
     <footer>
@@ -38,9 +44,26 @@
 <script>
 
 function changeText(type) {
+
     $.get(("/" + type), function (response) {
         console.log(response);
         $('#placeholder').text(response);
+    }).fail({
+        $('#placeholder').text("Oops! Something went wrong, Please try again!");
     });
+
 };
+
+function getFormData() {
+
+    let cName = $('#cName').val();
+    let cPop = $('#cPop').val();
+
+    $(':input','#cForm')
+    .not(':button, :submit, :reset, :hidden')
+    .val('')
+    .prop('checked', false)
+    .prop('selected', false);
+    alert('Success!');
+}
 </script>
