--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,8 @@
         <div class="container" style="margin-top: 50px; background-color: darkgrey; height: 80vh; padding: 20px" >
             <button type="button" class="btn btn-info" onclick="changeText('users')">Get All Users</button>
             <button type="button" class="btn btn-info" onclick="changeText('countries')">Get All Countries</button>
-            <button type="button" class="btn btn-info" data-toggle="modal" data-target="#myModal">Add New Country</button>
+            <button type="button" class="btn btn-success" data-toggle="modal" data-target="#myModal">Add New Country</button>
+            <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#delModal" disabled>Delete Country</button>
 
             <p style="color: black;margin-top: 30px; text-align: justify" id="placeholder">Placeholder Text</p>
 
@@ -28,12 +29,37 @@
                           </div>
                       </div>
                         <div class="modal-footer">
-                            <button type="submit" name="submit" type="submit" value="submit" class="btn btn-default" data-dismiss="modal" onclick="getFormData()">Submit</button>
+                            <button type="submit" name="submit" type="submit" value="submit" class="btn btn-success" data-dismiss="modal" onclick="getFormData()">Submit</button>
                         </div>
                     </form>
                   </div>
                 </div>
             </div>
+
+
+            <div class="modal fade" id="delModal" role="dialog">
+                <div class="modal-dialog">
+                  <!-- Modal content-->
+                  <div class="modal-content">
+                    <div class="modal-header">
+                        <h4 class="modal-title">Delete Country</h4>
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    </div>
+                    <form id="cForm">
+                      <div class="modal-body">
+                          <div class="form-group">
+                            <label for="cDel">Country Name</label>
+                            <input type="text" class="form-control" id="cDel" placeholder="Country Name" required>
+                          </div>
+                      </div>
+                        <div class="modal-footer">
+                            <button type="submit" name="submit" type="submit" value="submit" class="btn btn-danger" data-dismiss="modal" onclick="deleteCountry()">Delete</button>
+                        </div>
+                    </form>
+                  </div>
+                </div>
+            </div>
+
         </div>
     </main>
     <footer>
@@ -41,34 +67,3 @@
     </footer>
 </body>
 </html>
-<script>
-
-function changeText(type) {
-
-    $.get(("/" + type), function (response) {
-        console.log(response);
-        $('#placeholder').text(response);
-    {#}).fail({#}
-    {#    $('#placeholder').text(Oops! Something went wrong, Please try again!);#}
-    });
-
-};
-
-function getFormData() {
-
-    let country = {};
-    country["cName"] = $('#cName').val();
-    country["cPop"] = $('#cPop').val();
-    console.log(country);
-
-    $.post(("/countries"), country, function (data) {
-        alert(data);
-    });
-
-    $(':input', '#cForm')
-    .not(':button, :submit, :reset, :hidden')
-    .val('')
-    .prop('checked', false)
-    .prop('selected', false);
-};
-</script>
