--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
             <button type="button" class="btn btn-info" onclick="changeText('users')">Get All Users</button>
             <button type="button" class="btn btn-info" onclick="changeText('countries')">Get All Countries</button>
             <button type="button" class="btn btn-success" data-toggle="modal" data-target="#myModal">Add New Country</button>
-            <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#delModal" disabled>Delete Country</button>
+            <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#delModal">Delete Country</button>
 
             <p style="color: black;margin-top: 30px; text-align: justify" id="placeholder">Placeholder Text</p>
 
