--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <body>
     <main>
         <div class="container" style="margin-top: 50px; background-color: darkgrey; height: 80vh; padding: 20px" >
-            <button type="button" class="btn btn-info" onclick="changeText('users')">Get All Users</button>
+            <button type="button" class="btn btn-success" data-toggle="modal" data-target="#oneModal">Find One Country</button>
             <button type="button" class="btn btn-info" onclick="changeText('countries')">Get All Countries</button>
             <button type="button" class="btn btn-success" data-toggle="modal" data-target="#myModal">Add New Country</button>
             <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#delModal">Delete Country</button>
@@ -54,6 +54,29 @@
                       </div>
                         <div class="modal-footer">
                             <button type="submit" name="submit" type="submit" value="submit" class="btn btn-danger" data-dismiss="modal" onclick="deleteCountry()">Delete</button>
+                        </div>
+                    </form>
+                  </div>
+                </div>
+            </div>
+
+            <div class="modal fade" id="oneModal" role="dialog">
+                <div class="modal-dialog">
+                  <!-- Modal content-->
+                  <div class="modal-content">
+                    <div class="modal-header">
+                        <h4 class="modal-title">Find a Country</h4>
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    </div>
+                    <form id="cForm">
+                      <div class="modal-body">
+                          <div class="form-group">
+                            <label for="cFind">Find Country</label>
+                            <input type="text" class="form-control" id="cFind" placeholder="Enter Country ID" required>
+                          </div>
+                      </div>
+                        <div class="modal-footer">
+                            <button type="submit" name="submit" type="submit" value="submit" class="btn btn-danger" data-dismiss="modal" onclick="findCountry()">Find</button>
                         </div>
                     </form>
                   </div>
