--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <body>
     <main>
         <div class="container" style="margin-top: 50px; background-color: darkgrey; height: 80vh; padding: 20px" >
-            <button type="button" class="btn btn-success" data-toggle="modal" data-target="#oneModal">Find One Country</button>
+            <button type="button" class="btn btn-info" data-toggle="modal" data-target="#oneModal">Find One Country</button>
             <button type="button" class="btn btn-info" onclick="changeText('countries')">Get All Countries</button>
             <button type="button" class="btn btn-success" data-toggle="modal" data-target="#myModal">Add New Country</button>
             <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#delModal">Delete Country</button>
