--- a/templates/header.html
+++ b/templates/header.html
@@ -9,7 +9,8 @@
     <title>{{ title }}</title>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-     <script src="{{ url_for('static', filename='scripts.js') }}"></script>
+    <script src="{{ url_for('static', filename='scripts.js') }}"></script>
+    <script src="{{ url_for('static', filename='d3.js') }}"></script>
 
 </head>
 <header>
