--- a/templates/index.html
+++ b/templates/index.html
@@ -6,8 +6,17 @@
             <button type="button" class="btn btn-info" onclick="changeText('countries')">Get All Countries</button>
             <button type="button" class="btn btn-success" data-toggle="modal" data-target="#myModal">Add New Country</button>
             <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#delModal">Delete Country</button>
+            <button type="button" class="btn btn-info" onclick="d3Svg()">D3 Rectangle</button>
 
             <p style="color: black;margin-top: 30px; text-align: justify" id="placeholder">Placeholder Text</p>
+
+            <svg width="960" height="500">
+                <circle></circle>
+                <circle></circle>
+                <circle></circle>
+                <circle></circle>
+                <circle></circle>
+            </svg>
 
             <div class="modal fade" id="myModal" role="dialog">
                 <div class="modal-dialog">
