Made face learning d3

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
             <button type="button" class="btn btn-info" onclick="changeText('countries')">Get All Countries</button>
             <button type="button" class="btn btn-success" data-toggle="modal" data-target="#myModal">Add New Country</button>
             <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#delModal">Delete Country</button>
-            <button type="button" class="btn btn-info" onclick="d3Svg()">D3 Rectangle</button>
+            <button type="button" class="btn btn-info" onclick="d3Svg()">D3 Face</button>
 
             <p style="color: black;margin-top: 30px; text-align: justify" id="placeholder">Placeholder Text</p>
 
