Quick button tweak

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,15 +3,14 @@
     <main>
         <div class="container" style="margin-top: 50px; background-color: darkgrey; height: 80vh; padding: 20px" >
             <button type="button" class="btn btn-info" data-toggle="modal" data-target="#oneModal">Find One Country</button>
-            <button type="button" class="btn btn-info" onclick="getAllCountries()">Get All Countries</button>
+            <button type="button" class="btn btn-info" onclick="getAllCountries()">Get All Country Data</button>
             <button type="button" class="btn btn-success" data-toggle="modal" data-target="#myModal">Add New Country</button>
             <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#delModal">Delete Country</button>
-            <button type="button" class="btn btn-info" onclick="d3Svg()">D3 Face</button>
             <button type="button" class="btn btn-info" onclick="countryCircles()">Circles Tests</button>
 
-            <p style="color: black;margin-top: 30px; text-align: justify" id="placeholder">Placeholder Text</p>
+            <p id="placeholder"></p>
 
-            <svg width="960" height="500">
+            <svg width="1095" height="70vh">
 
             </svg>
 
