Added New Links to Nav

--- a/templates/header.html
+++ b/templates/header.html
@@ -15,7 +15,7 @@
 </head>
 <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">Web 3</a>
+        <a class="navbar-brand" href="#">Web 3 FLASK Stack</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -27,7 +27,17 @@
             <li class="nav-item">
                 <a class="nav-link" href="/inspiration">Inspiration Websites</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/loadData">Load CSV Files</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Drop Database</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/loadData">API Documentation</a>
+            </li>
             </ul>
+            <span class="navbar-text ml-auto">Dion Bedford</span>
         </div>
     </nav>
 </header>
