--- a/templates/header.html
+++ b/templates/header.html
@@ -31,10 +31,10 @@
                 <a class="nav-link" href="/loadData">Load CSV Files</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Drop Database</a>
+                <a class="nav-link" href="/deleteTable">Drop Database</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/loadData">API Documentation</a>
+                <a class="nav-link" href="#">API Documentation</a>
             </li>
             </ul>
             <span class="navbar-text ml-auto">Dion Bedford</span>
