--- a/static/styles.css
+++ b/static/styles.css
@@ -1,71 +1,22 @@
-@import 'https://fonts.googleapis.com/css?family=Lily+Script+One';
+@import "https://fonts.googleapis.com/css?family=Lily+Script+One";
+body { background-color: #333; }
 
-body{
-    background-color: #333;
-}
+.nCard { position: absolute; top: 50%; left: 50%; width: 300px; height: 600px; margin: -150px; float: left; perspective: 500px; }
+.nCard :hover .nContent { transform: rotateY(180deg); transition: transform 0.5s; }
 
-.nCard {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 300px;
-    height: 600px;
-    margin: -150px;
-    float: left;
-    perspective: 500px;
-}
+.nContent { position: absolute; width: 100%; height: 100%; box-shadow: 0 0 15px rgba(0, 0, 0, 0.1); transition: transform 1s; transform-style: preserve-3d; }
 
-.nContent {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    box-shadow: 0 0 15px rgba(0,0,0,0.1);
+.front, .back { position: absolute; height: 100%; width: 100%; background: white; line-height: 550px; color: white; text-align: center; font-size: 35px; font-weight: 600; border-radius: 5px; backface-visibility: hidden; }
 
-    transition: transform 1s;
-    transform-style: preserve-3d;
-}
+.back { background: black; color: white; transform: rotateY(180deg); }
 
-.nCard:hover .nContent {
-    transform: rotateY( 180deg ) ;
-    transition: transform 0.5s;
-}
+.back a { color: white; }
 
-.front,
-.back {
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    background: white;
-    line-height: 550px;
-    color: white;
-    text-align: center;
-    font-size: 35px;
-    font-weight: 600;
-    border-radius: 5px;
-    backface-visibility: hidden;
-}
+.inspoHead { text-align: center; margin: 0 auto 10px auto; font-weight: bolder; color: chocolate; }
 
-.back {
-    background: black;
-    color: white;
-    transform: rotateY( 180deg );
-}
+.mainContent { margin-top: 50px; height: 80vh; padding: 20px; overflow: hidden; }
 
-.back, a{
-    color: white;
-}
+.btn-outline-success { border-color: #64A6BD; color: #90A8C3; }
+.btn-outline-success:hover { text-decoration: none; background-color: #64A6BD !important; border-color: #64A6BD; }
 
-.inspoHead{
-    text-align: center;
-    margin: 0 auto 10px auto;
-    font-weight: bolder;
-    color: chocolate;
-}
-
-.mainContent{
-    margin-top: 50px;
-    background-color: darkgrey;
-    height: 80vh;
-    padding: 20px;
-    overflow: hidden;
-}
+/*# sourceMappingURL=styles.css.map */
