--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,12 @@
 {% include "header.html" %}
 <body>
     <main>
-        <div class="container mainContent" style="margin-top: 50px; background-color: darkgrey; height: 80vh; padding: 20px; overflow: hidden" >
-            <button type="button" class="btn btn-info" data-toggle="modal" data-target="#oneModal">Find One Country</button>
+        <div class="container mainContent" style="margin-top: 50px; height: 80vh; padding: 20px; overflow: hidden" >
+            <button type="button" class="btn btn-outline-info" data-toggle="modal" data-target="#oneModal">Find One Country</button>
 {#            <button type="button" class="btn btn-info" onclick="getAllCountries()">Get All Country Data</button>#}
-            <button type="button" class="btn btn-success" data-toggle="modal" data-target="#myModal">Add New Country</button>
-            <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#delModal">Delete Country</button>
-            <button type="button" class="btn btn-info" onclick="countryCircles()">Load Graph</button>
+            <button type="button" class="btn btn-outline-success" data-toggle="modal" data-target="#myModal">Add New Country</button>
+            <button type="button" class="btn btn-outline-danger" data-toggle="modal" data-target="#delModal">Delete Country</button>
+            <button type="button" class="btn btn-outline-info" onclick="countryCircles()">Load Graph</button>
 
             <p id="placeholder"></p>
 
