--- a/templates/index.html
+++ b/templates/index.html
@@ -2,15 +2,17 @@
 <body>
     <main>
         <div class="container mainContent" style="margin-top: 50px; height: 80vh; padding: 20px; overflow: hidden" >
-            <button type="button" class="btn btn-outline-info" data-toggle="modal" data-target="#oneModal">Find One Country</button>
-{#            <button type="button" class="btn btn-info" onclick="getAllCountries()">Get All Country Data</button>#}
-            <button type="button" class="btn btn-outline-success" data-toggle="modal" data-target="#myModal">Add New Country</button>
-            <button type="button" class="btn btn-outline-danger" data-toggle="modal" data-target="#delModal">Delete Country</button>
-            <button type="button" class="btn btn-outline-info" onclick="countryCircles()">Load Graph</button>
+            <div class="buttonGroup">
+                <button type="button" class="btn btn-outline-info" data-toggle="modal" data-target="#oneModal">Find One Country</button>
+    {#            <button type="button" class="btn btn-info" onclick="getAllCountries()">Get All Country Data</button>#}
+                <button type="button" class="btn btn-outline-success" data-toggle="modal" data-target="#myModal">Add New Country</button>
+                <button type="button" class="btn btn-outline-danger" data-toggle="modal" data-target="#delModal">Delete Country</button>
+                <button type="button" class="btn btn-outline-primary" onclick="countryCircles()">Load Graph</button>
+            </div>
 
             <p id="placeholder"></p>
 
-            <svg width="1095" height="70vh">
+            <svg width="1350" height="70vh">
 
             </svg>
 
@@ -90,8 +92,8 @@
 
         </div>
     </main>
-    <footer>
-
-    </footer>
+<footer class="footer">
+    &copy Dion Bedford
+</footer>
 </body>
 </html>
