--- a/templates/index.html
+++ b/templates/index.html
@@ -83,7 +83,7 @@
                           </div>
                       </div>
                         <div class="modal-footer">
-                            <button type="submit" name="submit" type="submit" value="submit" class="btn btn-danger" data-dismiss="modal" onclick="findCountry()">Find</button>
+                            <button type="submit" name="submit" type="submit" value="submit" class="btn btn-info" data-dismiss="modal" onclick="findCountry()">Find</button>
                         </div>
                     </form>
                   </div>
