--- a/templates/inspiration.html
+++ b/templates/inspiration.html
@@ -50,8 +50,8 @@
         <div class="container" style="display: block; margin-bottom:20px">
             <div class="row">
                 <div class="col-12" style="color: whitesmoke">
-                    <p>To accent the dark them nature of this website I`ve used a <a href="https://coolors.co/"> color generator</a> to help me generate a colour scheme with some more "pastel tones", this helps to replace the somewhat abrasive and bright boilerplate bootstrap colours.</p>
-                    <img src="{{ url_for('static', filename='colors.png') }}" style="max-width: 100%; height: auto;">
+                    <p>To accent the dark them nature of this website I`ve used a <a href="https://coolors.co/"> color generator</a> to help me generate a colour scheme with some more "pastel tones", this helps to replace the somewhat abrasive and bright boilerplate bootstrap colors.</p>
+                    <img src="{{ url_for('static', filename='colors.png') }}" class="colorImg">
                 </div>
             </div>
         </div>
