--- a/templates/header.html
+++ b/templates/header.html
@@ -15,7 +15,7 @@
 </head>
 <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">Web 3 FLASK Stack</a>
+        <a class="navbar-brand" href="/">Web 3 FLASK Stack</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
