--- a/styles.scss
+++ b/styles.scss
@@ -92,7 +92,7 @@ footer{
     text-align: center;
     margin: 0 auto 10px auto;
     font-weight: bolder;
-    color: chocolate;
+    color: $quinaryColor;
 }
 
 
