--- a/static/styles.css
+++ b/static/styles.css
@@ -2,7 +2,7 @@
 /* Color variables */
 body { background-color: #333; }
 
-footer { text-align: center; margin-bottom: 20px; }
+footer { text-align: center; margin-bottom: 20px; color: #CDEAC0; }
 
 #placeholder { color: #FF928B; text-align: center; margin-top: 20px; }
 
