--- a/styles.scss
+++ b/styles.scss
@@ -235,3 +235,11 @@ footer{
     text-shadow: #000 0px 0px 35px;
     -webkit-font-smoothing: antialiased;
 }
+
+#loader{
+    left: 45%;
+    position: absolute;
+    top: 43%;
+    width: 150px;
+    height: 150px;
+}
