--- a/templates/index.html
+++ b/templates/index.html
@@ -2,11 +2,11 @@
 <body>
     <main>
         <div class="container mainContent" >
-            <div class="buttonGroup">
+            <div class="buttonGroup" style="display: none;" id="showButton">
                 <button type="button" class="btn btn-outline-info" data-toggle="modal" data-target="#oneModal">Find One Country</button>
                 <button type="button" class="btn btn-outline-success" data-toggle="modal" data-target="#myModal">Add New Country</button>
                 <button type="button" class="btn btn-outline-danger" data-toggle="modal" data-target="#delModal">Delete Country</button>
-                <button type="button" class="btn btn-outline-primary" onclick="countryCircles()" style="display: none;" id="showButton">Show Visualization</button>
+                <button type="button" class="btn btn-outline-primary" onclick="countryCircles()">Show Visualization</button>
             </div>
 
             <p id="placeholder"></p>
