adjusted initial data

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
                 <button type="button" class="btn btn-outline-info" data-toggle="modal" data-target="#oneModal">Find One Country</button>
                 <button type="button" class="btn btn-outline-success" data-toggle="modal" data-target="#myModal">Add New Country</button>
                 <button type="button" class="btn btn-outline-danger" data-toggle="modal" data-target="#delModal">Delete Country</button>
-                <button type="button" class="btn btn-outline-primary" onclick="countryCircles('internet_users','internet_users',2010)">Show Visualization</button>
+                <button type="button" class="btn btn-outline-primary" onclick="countryCircles('internet_users','life_expectancy_years',2010)">Show Visualization</button>
                 <!-- <button name="play" class="btn btn-outline-warning" id="play">Play</button> 
                 <input type="range" id="slider" name="vol" min="2010" max="2020" value=""> -->
             </div>
