Added Play and slider functionality

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,8 +7,8 @@
                 <button type="button" class="btn btn-outline-success" data-toggle="modal" data-target="#myModal">Add New Country</button>
                 <button type="button" class="btn btn-outline-danger" data-toggle="modal" data-target="#delModal">Delete Country</button>
                 <button type="button" class="btn btn-outline-primary" onclick="countryCircles('internet_users','life_expectancy_years',2010)">Show Visualization</button>
-                <!-- <button name="play" class="btn btn-outline-warning" id="play">Play</button> 
-                <input type="range" id="slider" name="vol" min="2010" max="2020" value=""> -->
+                <input type="range" id="slider" name="slider" min="1970" max="2017" value="1970">
+                <button name="play" class="btn btn-outline-warning" id="play">Play</button>  
             </div>
 
             <p id="placeholder"></p>
@@ -96,3 +96,6 @@
 </footer>
 </body>
 </html>
+<script>
+
+</script>
