Added tooltips and ciircle size based on population

--- a/styles.scss
+++ b/styles.scss
@@ -233,7 +233,10 @@ footer{
 .bubbles{
     stroke-width: 1px;
     stroke: black;
-    opacity: .8
+    opacity: .8;
+    &:hover{
+        stroke:$primaryColor;
+    }
   }
 
 .axisLabels{
