--- a/templates/header.html
+++ b/templates/header.html
@@ -34,7 +34,7 @@
                 <a class="nav-link" href="/deleteTable">Drop Database</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">API Documentation</a>
+                <a class="nav-link" href="/docs">API Documentation</a>
             </li>
             </ul>
             <span class="navbar-text ml-auto">Dion Bedford</span>
