Updated tick properties to allow for a grid to be shown

--- a/styles.scss
+++ b/styles.scss
@@ -21,6 +21,13 @@ footer{
     bottom: 0;
     left: 46%; 
 }
+line{
+    color: darkgray;
+}
+
+.domain{
+    color: darkgray;
+}
 
 #placeholder{
     color: $quaternaryColor;
