--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
                 <button type="button" class="btn btn-outline-info" data-toggle="modal" data-target="#oneModal">Find One Country</button>
                 <button type="button" class="btn btn-outline-success" data-toggle="modal" data-target="#myModal">Add New Country</button>
                 <button type="button" class="btn btn-outline-danger" data-toggle="modal" data-target="#delModal">Delete Country</button>
-                <button type="button" class="btn btn-outline-primary" onclick="countryCircles('internet_users','life_expectancy_years',1960)">Show Visualization</button>  
+                <button type="button" class="btn btn-outline-primary" onclick="countryCircles('internet_users','cell_phones',1960)">Show Visualization</button>  
             </div>
 
             <p id="placeholder"></p>
@@ -15,7 +15,7 @@
 
             <div class="vizControls" id="vizControls" style="display: none;">
               <button name="play" class="btn btn-outline-warning" id="play">Play</button>
-              <input type="range" id="slider" name="slider" min="1960" max="2016" value="1950" class="slider">
+              <input type="range" id="slider" name="slider" min="1960" max="2016" value="1960" class="slider">
             </div>
 
             <div class="modal fade" id="myModal" role="dialog">
