--- a/styles.scss
+++ b/styles.scss
@@ -13,18 +13,16 @@ $quinaryColor: #FFAC81;
 body{
     background-color: #333;
 }
-footer{
-    text-align: center;
-    margin-bottom: 20px;
-    color:$primaryColor;
-    position: absolute;
-    bottom: 0;
-    left: 46%; 
-}
+
 line{
     color: darkgray;
 }
-
+label {
+    display: inline-block;
+    margin-bottom: .5rem;
+    color: $secondaryColor;
+    margin-right: 35px;
+}
 .domain{
     color: darkgray;
 }
@@ -374,5 +372,12 @@ line{
     }
   }
   
-  
+.form-control {
+    display: inline-block;
+    width: 26%;
+}
 
+.optionBoxes{
+    margin: 0px 85px;
+    display: inline;
+}
