Started splitting draw method into 'create' and Update parts for 'transitions' Method now accepts a bool as a control. Added transition for circle movment smoothing

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
                 <button type="button" class="btn btn-outline-info" data-toggle="modal" data-target="#oneModal">Find One Country</button>
                 <button type="button" class="btn btn-outline-success" data-toggle="modal" data-target="#myModal">Add New Country</button>
                 <button type="button" class="btn btn-outline-danger" data-toggle="modal" data-target="#delModal">Delete Country</button>
-                <button type="button" class="btn btn-outline-primary" onclick="countryCircles(); changeControls();">Show Visualization</button>  
+                <button type="button" class="btn btn-outline-primary" onclick="countryCircles(true); changeControls();">Show Visualization</button>  
             </div>
             
             <div class="buttonGroup" style="display: none;" id="axisSelects">
