--- a/templates/api_docs.html
+++ b/templates/api_docs.html
@@ -1,9 +1,125 @@
 {% include "header.html" %}
 <body>
-    <main>
+    <main style="color: white;">
         <div class="container">
             <h1 class="inspoHead">API Documentation</h1>
-           
+    
+            <h2>Routes</h2>
+            <p><em>GET /countries</em> - List all Countries
+            <br><em>GET /countries/&lt;optional:/count_id&gt;</em> - Get a Specific Country</p>
+            <br><em>POST /countries/&lt;count_name&t;</em> - Create a Specific Country</p>
+            <br><em>DELETE /countries/&lt;count_id&gt;</em> - Delete a Specific Country</p>
+            <h3>Optional parameters</h3>
+            <p>count_id (string) Specific Country ID used to retrieve a single country</p>
+
+            <h2>Example Usages</h2>
+            <p>
+                <h3>GET /countries</h3>
+                <em>Returns</em>
+                <blockquote class="blockquote">
+                    <pre ><code>
+{"
+    _id":{"$oid":"5ee5d432b481a2626b4755e5"},
+    "name":"Afghanistan",
+    "data":{
+        "cell_phones":{
+            "1960":"0",
+            "1961" ... },
+        "internet_users":{
+            "1960":"",
+            "1961":"" ...},
+        "life_expectancy_years":{
+            "1800":"28.2",
+            "1801""27.9" ..},
+        "population_total":{"55":"0","55" ... }
+    },
+    _id":{"$oid":"5ee5d432b481a2626b4755e5"},
+    "name":"Albania",
+    "data":{
+        "cell_phones":{
+            "1960":"0",
+            "1961" ... },
+        "internet_users":{
+            "1960":"",
+            "1961":"" ...},
+        "life_expectancy_years":{
+            "1800":"28.2",
+            "1801""27.9" ..},
+        "population_total":{"55":"0","55" ... }
+    } ...
+}
+                     </code></pre>
+            </blockquote>
+
+            <h3>GET /countries/5ee5d432b481a2626b4755e5</h3>
+            <em>Returns</em>
+            <blockquote class="blockquote">
+               <pre><code>
+{"
+    _id":{"$oid":"5ee5d432b481a2626b4755e5"},
+    "name":"Afghanistan",
+    "data":{
+        "cell_phones":{
+            "1960":"0",
+            "1961" ... },
+        "internet_users":{
+            "1960":"",
+            "1961":"" ...},
+        "life_expectancy_years":{
+            "1800":"28.2",
+            "1801""27.9" ..},
+        "population_total":{"55":"0","55" ... }
+    }
+}
+                </code></pre>
+                </blockquote>
+            </p>
     </main>
 </body>
 </html>
+
+<!--
+
+    List users
+GET /users - list all users
+GET /users/<optional:user_id> - list a specific user
+
+Optional parameters
+user_id (string) User ID used to specify a single user
+
+Example usage
+GET /users
+returns
+[
+    { 
+        user_id: "123", 
+        first_name: "John", 
+        last_name: "Samuels" 
+    },
+    {
+        user_id: "456",
+        first_name: "Alex",
+        last_name: "Michaels"
+    }
+]
+
+GET /users/123
+returns
+{ 
+    user_id: "123", 
+    first_name: "John", 
+    last_name: "Samuels" 
+}
+
+Errors
+Resource not found error - 404 Not Found
+
+GET /users/789
+returns
+{
+    "type": "error",
+    "status": 404,
+    "code": "not_found",
+    "message":"Resource not found. Please ensure resource exists."
+}
+-->
